--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -17,10 +17,10 @@
     </style>
   </head>
   <body>
-    <div id="dag"><svg width="871pt" height="2957pt"
- viewBox="0.00 0.00 871.00 2957.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 2953)">
-<polygon fill="white" stroke="transparent" points="-4,4 -4,-2953 867,-2953 867,4 -4,4"/>
+    <div id="dag"><svg width="871pt" height="3011pt"
+ viewBox="0.00 0.00 871.00 3011.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 3007)">
+<polygon fill="white" stroke="transparent" points="-4,4 -4,-3007 867,-3007 867,4 -4,4"/>
 <!-- ZcashFoundation/zebra#5297 -->
 <g id="node1" class="node open">
 <title>ZcashFoundation/zebra#5297</title>
@@ -713,19 +713,19 @@
 <g id="node47" class="node open">
 <title>ZcashFoundation/zebra#7907</title>
 <g id="a_node47"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7907" xlink:title="ZcashFoundation/zebra#7907&#10;feat(zebra&#45;scan): Make&#10;the scanner send data to&#10;the results channel" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="571.5,-2549 340.5,-2549 340.5,-2481 571.5,-2481 571.5,-2549"/>
-<text text-anchor="middle" x="456" y="-2533.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7907</text>
-<text text-anchor="middle" x="456" y="-2518.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Make</text>
-<text text-anchor="middle" x="456" y="-2503.8" font-family="Times,serif" font-size="14.00">the scanner send data to</text>
-<text text-anchor="middle" x="456" y="-2488.8" font-family="Times,serif" font-size="14.00">the results channel</text>
+<polygon fill="#c2e0c6" stroke="black" points="571.5,-2550 340.5,-2550 340.5,-2482 571.5,-2482 571.5,-2550"/>
+<text text-anchor="middle" x="456" y="-2534.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7907</text>
+<text text-anchor="middle" x="456" y="-2519.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Make</text>
+<text text-anchor="middle" x="456" y="-2504.8" font-family="Times,serif" font-size="14.00">the scanner send data to</text>
+<text text-anchor="middle" x="456" y="-2489.8" font-family="Times,serif" font-size="14.00">the results channel</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7905&#45;&gt;ZcashFoundation/zebra#7907 -->
 <g id="edge22" class="edge">
 <title>ZcashFoundation/zebra#7905&#45;&gt;ZcashFoundation/zebra#7907</title>
-<path fill="none" stroke="black" d="M255.69,-2540.4C279.95,-2537.3 305.65,-2534 330.25,-2530.9"/>
-<polygon fill="black" stroke="black" points="330.88,-2534.35 340.35,-2529.6 329.98,-2527.41 330.88,-2534.35"/>
+<path fill="none" stroke="black" d="M255.69,-2540.8C279.95,-2537.7 305.65,-2534.5 330.25,-2531.5"/>
+<polygon fill="black" stroke="black" points="330.88,-2534.95 340.35,-2530.2 329.98,-2528.01 330.88,-2534.95"/>
 </g>
 <!-- ZcashFoundation/zebra#7906 -->
 <g id="node48" class="node open">
@@ -741,8 +741,8 @@
 <!-- ZcashFoundation/zebra#7906&#45;&gt;ZcashFoundation/zebra#7907 -->
 <g id="edge23" class="edge">
 <title>ZcashFoundation/zebra#7906&#45;&gt;ZcashFoundation/zebra#7907</title>
-<path fill="none" stroke="black" d="M255.69,-2490.2C279.95,-2493.3 305.65,-2496.5 330.25,-2499.5"/>
-<polygon fill="black" stroke="black" points="329.98,-2502.99 340.35,-2500.8 330.88,-2496.05 329.98,-2502.99"/>
+<path fill="none" stroke="black" d="M255.69,-2490.6C279.95,-2493.7 305.65,-2497 330.25,-2500.1"/>
+<polygon fill="black" stroke="black" points="329.98,-2503.59 340.35,-2501.4 330.88,-2496.65 329.98,-2503.59"/>
 </g>
 <!-- ZcashFoundation/zebra#7927 -->
 <g id="node49" class="node open">
@@ -783,11 +783,11 @@
 <g id="node51" class="node open">
 <title>ZcashFoundation/zebra#7904</title>
 <g id="a_node51"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7904" xlink:title="ZcashFoundation/zebra#7904&#10;feat(zebra&#45;scan): Create&#10;a key storage database in&#10;RAM" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2777 24.5,-2777 24.5,-2709 255.5,-2709 255.5,-2777"/>
-<text text-anchor="middle" x="140" y="-2761.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7904</text>
-<text text-anchor="middle" x="140" y="-2746.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Create</text>
-<text text-anchor="middle" x="140" y="-2731.8" font-family="Times,serif" font-size="14.00">a key storage database in</text>
-<text text-anchor="middle" x="140" y="-2716.8" font-family="Times,serif" font-size="14.00">RAM</text>
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2831 24.5,-2831 24.5,-2763 255.5,-2763 255.5,-2831"/>
+<text text-anchor="middle" x="140" y="-2815.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7904</text>
+<text text-anchor="middle" x="140" y="-2800.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Create</text>
+<text text-anchor="middle" x="140" y="-2785.8" font-family="Times,serif" font-size="14.00">a key storage database in</text>
+<text text-anchor="middle" x="140" y="-2770.8" font-family="Times,serif" font-size="14.00">RAM</text>
 </a>
 </g>
 </g>
@@ -795,60 +795,84 @@
 <g id="node52" class="node open">
 <title>ZcashFoundation/zebra#7928</title>
 <g id="a_node52"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7928" xlink:title="ZcashFoundation/zebra#7928&#10;feat(zebra&#45;scan): Make&#10;the key storage database&#10;persistent" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="571.5,-2863 340.5,-2863 340.5,-2795 571.5,-2795 571.5,-2863"/>
-<text text-anchor="middle" x="456" y="-2847.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7928</text>
-<text text-anchor="middle" x="456" y="-2832.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Make</text>
-<text text-anchor="middle" x="456" y="-2817.8" font-family="Times,serif" font-size="14.00">the key storage database</text>
-<text text-anchor="middle" x="456" y="-2802.8" font-family="Times,serif" font-size="14.00">persistent</text>
+<polygon fill="#c2e0c6" stroke="black" points="571.5,-2917 340.5,-2917 340.5,-2849 571.5,-2849 571.5,-2917"/>
+<text text-anchor="middle" x="456" y="-2901.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7928</text>
+<text text-anchor="middle" x="456" y="-2886.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;scan): Make</text>
+<text text-anchor="middle" x="456" y="-2871.8" font-family="Times,serif" font-size="14.00">the key storage database</text>
+<text text-anchor="middle" x="456" y="-2856.8" font-family="Times,serif" font-size="14.00">persistent</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7904&#45;&gt;ZcashFoundation/zebra#7928 -->
 <g id="edge25" class="edge">
 <title>ZcashFoundation/zebra#7904&#45;&gt;ZcashFoundation/zebra#7928</title>
-<path fill="none" stroke="black" d="M255.69,-2774.4C280.05,-2781.1 305.88,-2788.2 330.58,-2794.9"/>
-<polygon fill="black" stroke="black" points="329.78,-2798.31 340.35,-2797.6 331.64,-2791.56 329.78,-2798.31"/>
+<path fill="none" stroke="black" d="M255.69,-2828.4C280.05,-2835.1 305.88,-2842.2 330.58,-2848.9"/>
+<polygon fill="black" stroke="black" points="329.78,-2852.31 340.35,-2851.6 331.64,-2845.56 329.78,-2852.31"/>
 </g>
 <!-- ZcashFoundation/zebra#7941 -->
 <g id="node53" class="node open">
 <title>ZcashFoundation/zebra#7941</title>
 <g id="a_node53"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7941" xlink:title="ZcashFoundation/zebra#7941&#10;feat(config): Add keys to&#10;be scanned to Zebra&#10;config file" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="571.5,-2777 340.5,-2777 340.5,-2709 571.5,-2709 571.5,-2777"/>
-<text text-anchor="middle" x="456" y="-2761.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7941</text>
-<text text-anchor="middle" x="456" y="-2746.8" font-family="Times,serif" font-size="14.00">feat(config): Add keys to</text>
-<text text-anchor="middle" x="456" y="-2731.8" font-family="Times,serif" font-size="14.00">be scanned to Zebra</text>
-<text text-anchor="middle" x="456" y="-2716.8" font-family="Times,serif" font-size="14.00">config file</text>
+<polygon fill="#c2e0c6" stroke="black" points="571.5,-2831 340.5,-2831 340.5,-2763 571.5,-2763 571.5,-2831"/>
+<text text-anchor="middle" x="456" y="-2815.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7941</text>
+<text text-anchor="middle" x="456" y="-2800.8" font-family="Times,serif" font-size="14.00">feat(config): Add keys to</text>
+<text text-anchor="middle" x="456" y="-2785.8" font-family="Times,serif" font-size="14.00">be scanned to Zebra</text>
+<text text-anchor="middle" x="456" y="-2770.8" font-family="Times,serif" font-size="14.00">config file</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7904&#45;&gt;ZcashFoundation/zebra#7941 -->
 <g id="edge26" class="edge">
 <title>ZcashFoundation/zebra#7904&#45;&gt;ZcashFoundation/zebra#7941</title>
-<path fill="none" stroke="black" d="M255.69,-2743C279.95,-2743 305.65,-2743 330.25,-2743"/>
-<polygon fill="black" stroke="black" points="330.35,-2746.5 340.35,-2743 330.35,-2739.5 330.35,-2746.5"/>
+<path fill="none" stroke="black" d="M255.69,-2797C279.95,-2797 305.65,-2797 330.25,-2797"/>
+<polygon fill="black" stroke="black" points="330.35,-2800.5 340.35,-2797 330.35,-2793.5 330.35,-2800.5"/>
+</g>
+<!-- ZcashFoundation/zebra#7946 -->
+<g id="node54" class="node open">
+<title>ZcashFoundation/zebra#7946</title>
+<g id="a_node54"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7946" xlink:title="ZcashFoundation/zebra#7946&#10;feat(scanner): Read and&#10;store keys from config at&#10;zebra startup" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" points="863,-2784 632,-2784 632,-2716 863,-2716 863,-2784"/>
+<text text-anchor="middle" x="747.5" y="-2768.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7946</text>
+<text text-anchor="middle" x="747.5" y="-2753.8" font-family="Times,serif" font-size="14.00">feat(scanner): Read and</text>
+<text text-anchor="middle" x="747.5" y="-2738.8" font-family="Times,serif" font-size="14.00">store keys from config at</text>
+<text text-anchor="middle" x="747.5" y="-2723.8" font-family="Times,serif" font-size="14.00">zebra startup</text>
+</a>
+</g>
+</g>
+<!-- ZcashFoundation/zebra#7904&#45;&gt;ZcashFoundation/zebra#7946 -->
+<g id="edge27" class="edge">
+<title>ZcashFoundation/zebra#7904&#45;&gt;ZcashFoundation/zebra#7946</title>
+<path fill="none" stroke="black" d="M255.6,-2764.8C275.59,-2760.4 296.29,-2756.5 316,-2754 418.36,-2741.1 535.5,-2741 621.72,-2743.6"/>
+<polygon fill="black" stroke="black" points="621.71,-2747.1 631.81,-2743.9 621.92,-2740.1 621.71,-2747.1"/>
+</g>
+<!-- ZcashFoundation/zebra#7941&#45;&gt;ZcashFoundation/zebra#7946 -->
+<g id="edge28" class="edge">
+<title>ZcashFoundation/zebra#7941&#45;&gt;ZcashFoundation/zebra#7946</title>
+<path fill="none" stroke="black" d="M571.83,-2778.4C588.18,-2775.7 605.05,-2773 621.57,-2770.3"/>
+<polygon fill="black" stroke="black" points="622.52,-2773.69 631.81,-2768.6 621.37,-2766.79 622.52,-2773.69"/>
 </g>
 <!-- ZcashFoundation/zebra#7926 -->
-<g id="node54" class="node open">
+<g id="node55" class="node open">
 <title>ZcashFoundation/zebra#7926</title>
-<g id="a_node54"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7926" xlink:title="ZcashFoundation/zebra#7926&#10;feat(zebra&#45;db): Split low&#10;level database code&#10;inside `zebra&#45;state`" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2863 24.5,-2863 24.5,-2795 255.5,-2795 255.5,-2863"/>
-<text text-anchor="middle" x="140" y="-2847.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7926</text>
-<text text-anchor="middle" x="140" y="-2832.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;db): Split low</text>
-<text text-anchor="middle" x="140" y="-2817.8" font-family="Times,serif" font-size="14.00">level database code</text>
-<text text-anchor="middle" x="140" y="-2802.8" font-family="Times,serif" font-size="14.00">inside `zebra&#45;state`</text>
+<g id="a_node55"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7926" xlink:title="ZcashFoundation/zebra#7926&#10;feat(zebra&#45;db): Split low&#10;level database code&#10;inside `zebra&#45;state`" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2917 24.5,-2917 24.5,-2849 255.5,-2849 255.5,-2917"/>
+<text text-anchor="middle" x="140" y="-2901.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7926</text>
+<text text-anchor="middle" x="140" y="-2886.8" font-family="Times,serif" font-size="14.00">feat(zebra&#45;db): Split low</text>
+<text text-anchor="middle" x="140" y="-2871.8" font-family="Times,serif" font-size="14.00">level database code</text>
+<text text-anchor="middle" x="140" y="-2856.8" font-family="Times,serif" font-size="14.00">inside `zebra&#45;state`</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7926&#45;&gt;ZcashFoundation/zebra#7928 -->
-<g id="edge27" class="edge">
+<g id="edge29" class="edge">
 <title>ZcashFoundation/zebra#7926&#45;&gt;ZcashFoundation/zebra#7928</title>
-<path fill="none" stroke="black" d="M255.69,-2829C279.95,-2829 305.65,-2829 330.25,-2829"/>
-<polygon fill="black" stroke="black" points="330.35,-2832.5 340.35,-2829 330.35,-2825.5 330.35,-2832.5"/>
+<path fill="none" stroke="black" d="M255.69,-2883C279.95,-2883 305.65,-2883 330.25,-2883"/>
+<polygon fill="black" stroke="black" points="330.35,-2886.5 340.35,-2883 330.35,-2879.5 330.35,-2886.5"/>
 </g>
 <!-- ZcashFoundation/zebra#7934 -->
-<g id="node55" class="node open">
+<g id="node56" class="node open">
 <title>ZcashFoundation/zebra#7934</title>
-<g id="a_node55"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7934" xlink:title="ZcashFoundation/zebra#7934&#10;change(zebra&#45;state): When&#10;the best chain changes,&#10;scan the new blocks in&#10;the best chain fork" target="_blank">
+<g id="a_node56"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7934" xlink:title="ZcashFoundation/zebra#7934&#10;change(zebra&#45;state): When&#10;the best chain changes,&#10;scan the new blocks in&#10;the best chain fork" target="_blank">
 <polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2690.5 24.5,-2690.5 24.5,-2607.5 255.5,-2607.5 255.5,-2690.5"/>
 <text text-anchor="middle" x="140" y="-2675.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7934</text>
 <text text-anchor="middle" x="140" y="-2660.3" font-family="Times,serif" font-size="14.00">change(zebra&#45;state): When</text>
@@ -859,39 +883,39 @@
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7934&#45;&gt;ZcashFoundation/zebra#7927 -->
-<g id="edge28" class="edge">
+<g id="edge30" class="edge">
 <title>ZcashFoundation/zebra#7934&#45;&gt;ZcashFoundation/zebra#7927</title>
 <path fill="none" stroke="black" d="M255.69,-2649C279.95,-2649 305.65,-2649 330.25,-2649"/>
 <polygon fill="black" stroke="black" points="330.35,-2652.5 340.35,-2649 330.35,-2645.5 330.35,-2652.5"/>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#77 -->
-<g id="node56" class="node open">
+<g id="node57" class="node open">
 <title>ZcashFoundation/ed25519&#45;zebra#77</title>
-<g id="a_node56"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-2949 0,-2949 0,-2881 280,-2881 280,-2949"/>
-<text text-anchor="middle" x="140" y="-2933.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
-<text text-anchor="middle" x="140" y="-2918.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
-<text text-anchor="middle" x="140" y="-2903.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
-<text text-anchor="middle" x="140" y="-2888.8" font-family="Times,serif" font-size="14.00">crate</text>
+<g id="a_node57"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/77" xlink:title="ZcashFoundation/ed25519&#45;zebra#77&#10;Add instructions to the&#10;README for updating this&#10;crate" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="280,-3003 0,-3003 0,-2935 280,-2935 280,-3003"/>
+<text text-anchor="middle" x="140" y="-2987.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#77</text>
+<text text-anchor="middle" x="140" y="-2972.8" font-family="Times,serif" font-size="14.00">Add instructions to the</text>
+<text text-anchor="middle" x="140" y="-2957.8" font-family="Times,serif" font-size="14.00">README for updating this</text>
+<text text-anchor="middle" x="140" y="-2942.8" font-family="Times,serif" font-size="14.00">crate</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#79 -->
-<g id="node57" class="node closed">
+<g id="node58" class="node closed">
 <title>ZcashFoundation/ed25519&#45;zebra#79</title>
-<g id="a_node57"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
-<polygon fill="#fad8c7" stroke="black" points="596,-2941.5 316,-2941.5 316,-2888.5 596,-2888.5 596,-2941.5"/>
-<text text-anchor="middle" x="456" y="-2926.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
-<text text-anchor="middle" x="456" y="-2911.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
-<text text-anchor="middle" x="456" y="-2896.3" font-family="Times,serif" font-size="14.00">release</text>
+<g id="a_node58"><a xlink:href="https://github.com/ZcashFoundation/ed25519-zebra/issues/79" xlink:title="ZcashFoundation/ed25519&#45;zebra#79&#10;Tag a new &#160;ed25519&#45;zebra&#10;release" target="_blank">
+<polygon fill="#fad8c7" stroke="black" points="596,-2995.5 316,-2995.5 316,-2942.5 596,-2942.5 596,-2995.5"/>
+<text text-anchor="middle" x="456" y="-2980.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/ed25519&#45;zebra#79</text>
+<text text-anchor="middle" x="456" y="-2965.3" font-family="Times,serif" font-size="14.00">Tag a new &#160;ed25519&#45;zebra</text>
+<text text-anchor="middle" x="456" y="-2950.3" font-family="Times,serif" font-size="14.00">release</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79 -->
-<g id="edge29" class="edge">
+<g id="edge31" class="edge">
 <title>ZcashFoundation/ed25519&#45;zebra#77&#45;&gt;ZcashFoundation/ed25519&#45;zebra#79</title>
-<path fill="none" stroke="black" d="M280.1,-2915C288.49,-2915 296.96,-2915 305.4,-2915"/>
-<polygon fill="black" stroke="black" points="305.67,-2918.5 315.67,-2915 305.67,-2911.5 305.67,-2918.5"/>
+<path fill="none" stroke="black" d="M280.1,-2969C288.49,-2969 296.96,-2969 305.4,-2969"/>
+<polygon fill="black" stroke="black" points="305.67,-2972.5 315.67,-2969 305.67,-2965.5 305.67,-2972.5"/>
 </g>
 </g>
 </svg>
