--- a/zcash-zf-dag.html
+++ b/zcash-zf-dag.html
@@ -555,11 +555,11 @@
 <!-- ZcashFoundation/zebra#7845 -->
 <g id="node37" class="node open">
 <title>ZcashFoundation/zebra#7845</title>
-<g id="a_node37"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7845" xlink:title="ZcashFoundation/zebra#7845&#10;Add parameters to&#10;`Network::Testnet`&#10;variant" target="_blank">
+<g id="a_node37"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7845" xlink:title="ZcashFoundation/zebra#7845&#10;Tracking: Add parameters&#10;to `Network::Testnet`&#10;variant" target="_blank">
 <polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="255.5,-2041 24.5,-2041 24.5,-1973 255.5,-1973 255.5,-2041"/>
 <text text-anchor="middle" x="140" y="-2025.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7845</text>
-<text text-anchor="middle" x="140" y="-2010.8" font-family="Times,serif" font-size="14.00">Add parameters to</text>
-<text text-anchor="middle" x="140" y="-1995.8" font-family="Times,serif" font-size="14.00">`Network::Testnet`</text>
+<text text-anchor="middle" x="140" y="-2010.8" font-family="Times,serif" font-size="14.00">Tracking: Add parameters</text>
+<text text-anchor="middle" x="140" y="-1995.8" font-family="Times,serif" font-size="14.00">to `Network::Testnet`</text>
 <text text-anchor="middle" x="140" y="-1980.8" font-family="Times,serif" font-size="14.00">variant</text>
 </a>
 </g>
