--- a/zcash-zf-devops-dag.html
+++ b/zcash-zf-devops-dag.html
@@ -17,138 +17,118 @@
     </style>
   </head>
   <body>
-    <div id="dag"><svg width="773pt" height="508pt"
- viewBox="0.00 0.00 773.00 507.50" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 503.5)">
-<polygon fill="white" stroke="transparent" points="-4,4 -4,-503.5 769,-503.5 769,4 -4,4"/>
-<!-- ZcashFoundation/zebra#8039 -->
-<g id="node1" class="node open">
-<title>ZcashFoundation/zebra#8039</title>
-<g id="a_node1"><a xlink:href="https://github.com/ZcashFoundation/zebra/pull/8039" xlink:title="ZcashFoundation/zebra#8039&#10;change(ci): Split&#10;experimental feature&#10;tests into their own step" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-68 0,-68 0,-64 -4,-64 -4,-60 0,-60 0,-8 -4,-8 -4,-4 0,-4 0,0 231,0 231,-68"/>
-<polyline fill="none" stroke="black" stroke-width="2" points="0,-64 4,-64 4,-60 0,-60 "/>
-<polyline fill="none" stroke="black" stroke-width="2" points="0,-8 4,-8 4,-4 0,-4 "/>
-<text text-anchor="middle" x="115.5" y="-52.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#8039</text>
-<text text-anchor="middle" x="115.5" y="-37.8" font-family="Times,serif" font-size="14.00">change(ci): Split</text>
-<text text-anchor="middle" x="115.5" y="-22.8" font-family="Times,serif" font-size="14.00">experimental feature</text>
-<text text-anchor="middle" x="115.5" y="-7.8" font-family="Times,serif" font-size="14.00">tests into their own step</text>
-</a>
-</g>
-</g>
+    <div id="dag"><svg width="773pt" height="492pt"
+ viewBox="0.00 0.00 773.00 492.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 488)">
+<polygon fill="white" stroke="transparent" points="-4,4 -4,-488 769,-488 769,4 -4,4"/>
 <!-- ZcashFoundation/zebra#8037 -->
-<g id="node2" class="node open">
+<g id="node1" class="node open">
 <title>ZcashFoundation/zebra#8037</title>
-<g id="a_node2"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/8037" xlink:title="ZcashFoundation/zebra#8037&#10;Run Zebra&#39;s unit tests&#10;with the scanner enabled" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="498,-60.5 267,-60.5 267,-7.5 498,-7.5 498,-60.5"/>
-<text text-anchor="middle" x="382.5" y="-45.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#8037</text>
-<text text-anchor="middle" x="382.5" y="-30.3" font-family="Times,serif" font-size="14.00">Run Zebra&#39;s unit tests</text>
-<text text-anchor="middle" x="382.5" y="-15.3" font-family="Times,serif" font-size="14.00">with the scanner enabled</text>
+<g id="a_node1"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/8037" xlink:title="ZcashFoundation/zebra#8037&#10;Run Zebra&#39;s unit tests&#10;with the scanner enabled" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-53 0,-53 0,0 231,0 231,-53"/>
+<text text-anchor="middle" x="115.5" y="-37.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#8037</text>
+<text text-anchor="middle" x="115.5" y="-22.8" font-family="Times,serif" font-size="14.00">Run Zebra&#39;s unit tests</text>
+<text text-anchor="middle" x="115.5" y="-7.8" font-family="Times,serif" font-size="14.00">with the scanner enabled</text>
 </a>
 </g>
-</g>
-<!-- ZcashFoundation/zebra#8039&#45;&gt;ZcashFoundation/zebra#8037 -->
-<g id="edge1" class="edge">
-<title>ZcashFoundation/zebra#8039&#45;&gt;ZcashFoundation/zebra#8037</title>
-<path fill="none" stroke="black" d="M231.19,-34C239.55,-34 247.99,-34 256.4,-34"/>
-<polygon fill="black" stroke="black" points="256.63,-37.5 266.63,-34 256.63,-30.5 256.63,-37.5"/>
 </g>
 <!-- ZcashFoundation/zebra#7617 -->
-<g id="node3" class="node open">
+<g id="node2" class="node open">
 <title>ZcashFoundation/zebra#7617</title>
-<g id="a_node3"><a xlink:href="https://github.com/ZcashFoundation/zebra/pull/7617" xlink:title="ZcashFoundation/zebra#7617&#10;ref(docker): use cache&#10;mounts for build cache" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-139.5 0,-139.5 0,-135.5 -4,-135.5 -4,-131.5 0,-131.5 0,-94.5 -4,-94.5 -4,-90.5 0,-90.5 0,-86.5 231,-86.5 231,-139.5"/>
-<polyline fill="none" stroke="black" stroke-width="2" points="0,-135.5 4,-135.5 4,-131.5 0,-131.5 "/>
-<polyline fill="none" stroke="black" stroke-width="2" points="0,-94.5 4,-94.5 4,-90.5 0,-90.5 "/>
-<text text-anchor="middle" x="115.5" y="-124.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7617</text>
-<text text-anchor="middle" x="115.5" y="-109.3" font-family="Times,serif" font-size="14.00">ref(docker): use cache</text>
-<text text-anchor="middle" x="115.5" y="-94.3" font-family="Times,serif" font-size="14.00">mounts for build cache</text>
+<g id="a_node2"><a xlink:href="https://github.com/ZcashFoundation/zebra/pull/7617" xlink:title="ZcashFoundation/zebra#7617&#10;ref(docker): use cache&#10;mounts for build cache" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-124 0,-124 0,-120 -4,-120 -4,-116 0,-116 0,-79 -4,-79 -4,-75 0,-75 0,-71 231,-71 231,-124"/>
+<polyline fill="none" stroke="black" stroke-width="2" points="0,-120 4,-120 4,-116 0,-116 "/>
+<polyline fill="none" stroke="black" stroke-width="2" points="0,-79 4,-79 4,-75 0,-75 "/>
+<text text-anchor="middle" x="115.5" y="-108.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7617</text>
+<text text-anchor="middle" x="115.5" y="-93.8" font-family="Times,serif" font-size="14.00">ref(docker): use cache</text>
+<text text-anchor="middle" x="115.5" y="-78.8" font-family="Times,serif" font-size="14.00">mounts for build cache</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#6894 -->
-<g id="node4" class="node open">
+<g id="node3" class="node open">
 <title>ZcashFoundation/zebra#6894</title>
-<g id="a_node4"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/6894" xlink:title="ZcashFoundation/zebra#6894&#10;Use cached state for&#10;continuous deployment&#10;instances" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-226 0,-226 0,-158 231,-158 231,-226"/>
-<text text-anchor="middle" x="115.5" y="-210.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#6894</text>
-<text text-anchor="middle" x="115.5" y="-195.8" font-family="Times,serif" font-size="14.00">Use cached state for</text>
-<text text-anchor="middle" x="115.5" y="-180.8" font-family="Times,serif" font-size="14.00">continuous deployment</text>
-<text text-anchor="middle" x="115.5" y="-165.8" font-family="Times,serif" font-size="14.00">instances</text>
+<g id="a_node3"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/6894" xlink:title="ZcashFoundation/zebra#6894&#10;Use cached state for&#10;continuous deployment&#10;instances" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-210.5 0,-210.5 0,-142.5 231,-142.5 231,-210.5"/>
+<text text-anchor="middle" x="115.5" y="-195.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#6894</text>
+<text text-anchor="middle" x="115.5" y="-180.3" font-family="Times,serif" font-size="14.00">Use cached state for</text>
+<text text-anchor="middle" x="115.5" y="-165.3" font-family="Times,serif" font-size="14.00">continuous deployment</text>
+<text text-anchor="middle" x="115.5" y="-150.3" font-family="Times,serif" font-size="14.00">instances</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7558 -->
-<g id="node5" class="node open">
+<g id="node4" class="node open">
 <title>ZcashFoundation/zebra#7558</title>
-<g id="a_node5"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7558" xlink:title="ZcashFoundation/zebra#7558&#10;dev docs: Document how to&#10;fix cached state issues" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-297.5 0,-297.5 0,-244.5 231,-244.5 231,-297.5"/>
-<text text-anchor="middle" x="115.5" y="-282.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7558</text>
-<text text-anchor="middle" x="115.5" y="-267.3" font-family="Times,serif" font-size="14.00">dev docs: Document how to</text>
-<text text-anchor="middle" x="115.5" y="-252.3" font-family="Times,serif" font-size="14.00">fix cached state issues</text>
+<g id="a_node4"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7558" xlink:title="ZcashFoundation/zebra#7558&#10;dev docs: Document how to&#10;fix cached state issues" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-282 0,-282 0,-229 231,-229 231,-282"/>
+<text text-anchor="middle" x="115.5" y="-266.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7558</text>
+<text text-anchor="middle" x="115.5" y="-251.8" font-family="Times,serif" font-size="14.00">dev docs: Document how to</text>
+<text text-anchor="middle" x="115.5" y="-236.8" font-family="Times,serif" font-size="14.00">fix cached state issues</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#4464 -->
-<g id="node6" class="node open">
+<g id="node5" class="node open">
 <title>ZcashFoundation/zebra#4464</title>
-<g id="a_node6"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/4464" xlink:title="ZcashFoundation/zebra#4464&#10;ci: create documentation&#10;on how to run tests&#10;locally for development&#10;purposes" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-398.5 0,-398.5 0,-315.5 231,-315.5 231,-398.5"/>
-<text text-anchor="middle" x="115.5" y="-383.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#4464</text>
-<text text-anchor="middle" x="115.5" y="-368.3" font-family="Times,serif" font-size="14.00">ci: create documentation</text>
-<text text-anchor="middle" x="115.5" y="-353.3" font-family="Times,serif" font-size="14.00">on how to run tests</text>
-<text text-anchor="middle" x="115.5" y="-338.3" font-family="Times,serif" font-size="14.00">locally for development</text>
-<text text-anchor="middle" x="115.5" y="-323.3" font-family="Times,serif" font-size="14.00">purposes</text>
+<g id="a_node5"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/4464" xlink:title="ZcashFoundation/zebra#4464&#10;ci: create documentation&#10;on how to run tests&#10;locally for development&#10;purposes" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-383 0,-383 0,-300 231,-300 231,-383"/>
+<text text-anchor="middle" x="115.5" y="-367.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#4464</text>
+<text text-anchor="middle" x="115.5" y="-352.8" font-family="Times,serif" font-size="14.00">ci: create documentation</text>
+<text text-anchor="middle" x="115.5" y="-337.8" font-family="Times,serif" font-size="14.00">on how to run tests</text>
+<text text-anchor="middle" x="115.5" y="-322.8" font-family="Times,serif" font-size="14.00">locally for development</text>
+<text text-anchor="middle" x="115.5" y="-307.8" font-family="Times,serif" font-size="14.00">purposes</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7680 -->
-<g id="node7" class="node open">
+<g id="node6" class="node open">
 <title>ZcashFoundation/zebra#7680</title>
-<g id="a_node7"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7680" xlink:title="ZcashFoundation/zebra#7680&#10;Automatically open an&#10;issue when main branch&#10;release&#45;related merges&#10;fail" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-499.5 0,-499.5 0,-416.5 231,-416.5 231,-499.5"/>
-<text text-anchor="middle" x="115.5" y="-484.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7680</text>
-<text text-anchor="middle" x="115.5" y="-469.3" font-family="Times,serif" font-size="14.00">Automatically open an</text>
-<text text-anchor="middle" x="115.5" y="-454.3" font-family="Times,serif" font-size="14.00">issue when main branch</text>
-<text text-anchor="middle" x="115.5" y="-439.3" font-family="Times,serif" font-size="14.00">release&#45;related merges</text>
-<text text-anchor="middle" x="115.5" y="-424.3" font-family="Times,serif" font-size="14.00">fail</text>
+<g id="a_node6"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7680" xlink:title="ZcashFoundation/zebra#7680&#10;Automatically open an&#10;issue when main branch&#10;release&#45;related merges&#10;fail" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-484 0,-484 0,-401 231,-401 231,-484"/>
+<text text-anchor="middle" x="115.5" y="-468.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7680</text>
+<text text-anchor="middle" x="115.5" y="-453.8" font-family="Times,serif" font-size="14.00">Automatically open an</text>
+<text text-anchor="middle" x="115.5" y="-438.8" font-family="Times,serif" font-size="14.00">issue when main branch</text>
+<text text-anchor="middle" x="115.5" y="-423.8" font-family="Times,serif" font-size="14.00">release&#45;related merges</text>
+<text text-anchor="middle" x="115.5" y="-408.8" font-family="Times,serif" font-size="14.00">fail</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7891 -->
-<g id="node8" class="node open">
+<g id="node7" class="node open">
 <title>ZcashFoundation/zebra#7891</title>
-<g id="a_node8"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7891" xlink:title="ZcashFoundation/zebra#7891&#10;change(docker): Publish&#10;fewer Zebra docker tags,&#10;and standardise names" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="498,-492 267,-492 267,-424 498,-424 498,-492"/>
-<text text-anchor="middle" x="382.5" y="-476.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7891</text>
-<text text-anchor="middle" x="382.5" y="-461.8" font-family="Times,serif" font-size="14.00">change(docker): Publish</text>
-<text text-anchor="middle" x="382.5" y="-446.8" font-family="Times,serif" font-size="14.00">fewer Zebra docker tags,</text>
-<text text-anchor="middle" x="382.5" y="-431.8" font-family="Times,serif" font-size="14.00">and standardise names</text>
+<g id="a_node7"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7891" xlink:title="ZcashFoundation/zebra#7891&#10;change(docker): Publish&#10;fewer Zebra docker tags,&#10;and standardise names" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" points="498,-476.5 267,-476.5 267,-408.5 498,-408.5 498,-476.5"/>
+<text text-anchor="middle" x="382.5" y="-461.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7891</text>
+<text text-anchor="middle" x="382.5" y="-446.3" font-family="Times,serif" font-size="14.00">change(docker): Publish</text>
+<text text-anchor="middle" x="382.5" y="-431.3" font-family="Times,serif" font-size="14.00">fewer Zebra docker tags,</text>
+<text text-anchor="middle" x="382.5" y="-416.3" font-family="Times,serif" font-size="14.00">and standardise names</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7680&#45;&gt;ZcashFoundation/zebra#7891 -->
-<g id="edge2" class="edge">
+<g id="edge1" class="edge">
 <title>ZcashFoundation/zebra#7680&#45;&gt;ZcashFoundation/zebra#7891</title>
-<path fill="none" stroke="black" d="M231.19,-458C239.55,-458 247.99,-458 256.4,-458"/>
-<polygon fill="black" stroke="black" points="256.63,-461.5 266.63,-458 256.63,-454.5 256.63,-461.5"/>
+<path fill="none" stroke="black" d="M231.19,-442.5C239.55,-442.5 247.99,-442.5 256.4,-442.5"/>
+<polygon fill="black" stroke="black" points="256.63,-446 266.63,-442.5 256.63,-439 256.63,-446"/>
 </g>
 <!-- ZcashFoundation/zebra#7892 -->
-<g id="node9" class="node open">
+<g id="node8" class="node open">
 <title>ZcashFoundation/zebra#7892</title>
-<g id="a_node9"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7892" xlink:title="ZcashFoundation/zebra#7892&#10;change(release): Enable&#10;all user features in the&#10;`experimental` build" target="_blank">
-<polygon fill="#a7c2aa" stroke="black" points="765,-492 534,-492 534,-424 765,-424 765,-492"/>
-<text text-anchor="middle" x="649.5" y="-476.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7892</text>
-<text text-anchor="middle" x="649.5" y="-461.8" font-family="Times,serif" font-size="14.00">change(release): Enable</text>
-<text text-anchor="middle" x="649.5" y="-446.8" font-family="Times,serif" font-size="14.00">all user features in the</text>
-<text text-anchor="middle" x="649.5" y="-431.8" font-family="Times,serif" font-size="14.00">`experimental` build</text>
+<g id="a_node8"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7892" xlink:title="ZcashFoundation/zebra#7892&#10;change(release): Enable&#10;all user features in the&#10;`experimental` build" target="_blank">
+<polygon fill="#a7c2aa" stroke="black" points="765,-476.5 534,-476.5 534,-408.5 765,-408.5 765,-476.5"/>
+<text text-anchor="middle" x="649.5" y="-461.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7892</text>
+<text text-anchor="middle" x="649.5" y="-446.3" font-family="Times,serif" font-size="14.00">change(release): Enable</text>
+<text text-anchor="middle" x="649.5" y="-431.3" font-family="Times,serif" font-size="14.00">all user features in the</text>
+<text text-anchor="middle" x="649.5" y="-416.3" font-family="Times,serif" font-size="14.00">`experimental` build</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7891&#45;&gt;ZcashFoundation/zebra#7892 -->
-<g id="edge3" class="edge">
+<g id="edge2" class="edge">
 <title>ZcashFoundation/zebra#7891&#45;&gt;ZcashFoundation/zebra#7892</title>
-<path fill="none" stroke="black" d="M498.19,-458C506.55,-458 514.99,-458 523.4,-458"/>
-<polygon fill="black" stroke="black" points="523.63,-461.5 533.63,-458 523.63,-454.5 523.63,-461.5"/>
+<path fill="none" stroke="black" d="M498.19,-442.5C506.55,-442.5 514.99,-442.5 523.4,-442.5"/>
+<polygon fill="black" stroke="black" points="523.63,-446 533.63,-442.5 523.63,-439 523.63,-446"/>
 </g>
 </g>
 </svg>
