--- a/zcash-zf-devops-dag.html
+++ b/zcash-zf-devops-dag.html
@@ -17,137 +17,107 @@
     </style>
   </head>
   <body>
-    <div id="dag"><svg width="773pt" height="507pt"
- viewBox="0.00 0.00 773.00 507.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 503)">
-<polygon fill="white" stroke="transparent" points="-4,4 -4,-503 769,-503 769,4 -4,4"/>
-<!-- ZcashFoundation/zebra#8037 -->
-<g id="node1" class="node open">
-<title>ZcashFoundation/zebra#8037</title>
-<g id="a_node1"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/8037" xlink:title="ZcashFoundation/zebra#8037&#10;Run Zebra&#39;s unit tests&#10;with the scanner enabled" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-68 0,-68 0,-15 231,-15 231,-68"/>
-<text text-anchor="middle" x="115.5" y="-52.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#8037</text>
-<text text-anchor="middle" x="115.5" y="-37.8" font-family="Times,serif" font-size="14.00">Run Zebra&#39;s unit tests</text>
-<text text-anchor="middle" x="115.5" y="-22.8" font-family="Times,serif" font-size="14.00">with the scanner enabled</text>
-</a>
-</g>
-</g>
-<!-- ZcashFoundation/zebra#8069 -->
-<g id="node2" class="node open">
-<title>ZcashFoundation/zebra#8069</title>
-<g id="a_node2"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/8069" xlink:title="ZcashFoundation/zebra#8069&#10;test: Add database&#10;conflict and ephemeral&#10;tests for the scanner&#10;database" target="_blank">
-<polygon fill="#a7c2aa" stroke="black" points="498,-83 267,-83 267,0 498,0 498,-83"/>
-<text text-anchor="middle" x="382.5" y="-67.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#8069</text>
-<text text-anchor="middle" x="382.5" y="-52.8" font-family="Times,serif" font-size="14.00">test: Add database</text>
-<text text-anchor="middle" x="382.5" y="-37.8" font-family="Times,serif" font-size="14.00">conflict and ephemeral</text>
-<text text-anchor="middle" x="382.5" y="-22.8" font-family="Times,serif" font-size="14.00">tests for the scanner</text>
-<text text-anchor="middle" x="382.5" y="-7.8" font-family="Times,serif" font-size="14.00">database</text>
-</a>
-</g>
-</g>
-<!-- ZcashFoundation/zebra#8037&#45;&gt;ZcashFoundation/zebra#8069 -->
-<g id="edge1" class="edge">
-<title>ZcashFoundation/zebra#8037&#45;&gt;ZcashFoundation/zebra#8069</title>
-<path fill="none" stroke="black" d="M231.19,-41.5C239.55,-41.5 247.99,-41.5 256.4,-41.5"/>
-<polygon fill="black" stroke="black" points="256.63,-45 266.63,-41.5 256.63,-38 256.63,-45"/>
-</g>
+    <div id="dag"><svg width="773pt" height="421pt"
+ viewBox="0.00 0.00 773.00 421.00" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+<g id="graph0" class="graph" transform="scale(1 1) rotate(0) translate(4 417)">
+<polygon fill="white" stroke="transparent" points="-4,4 -4,-417 769,-417 769,4 -4,4"/>
 <!-- ZcashFoundation/zebra#7617 -->
-<g id="node3" class="node open">
+<g id="node1" class="node open">
 <title>ZcashFoundation/zebra#7617</title>
-<g id="a_node3"><a xlink:href="https://github.com/ZcashFoundation/zebra/pull/7617" xlink:title="ZcashFoundation/zebra#7617&#10;ref(docker): use cache&#10;mounts for build cache" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-139 0,-139 0,-135 -4,-135 -4,-131 0,-131 0,-94 -4,-94 -4,-90 0,-90 0,-86 231,-86 231,-139"/>
-<polyline fill="none" stroke="black" stroke-width="2" points="0,-135 4,-135 4,-131 0,-131 "/>
-<polyline fill="none" stroke="black" stroke-width="2" points="0,-94 4,-94 4,-90 0,-90 "/>
-<text text-anchor="middle" x="115.5" y="-123.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7617</text>
-<text text-anchor="middle" x="115.5" y="-108.8" font-family="Times,serif" font-size="14.00">ref(docker): use cache</text>
-<text text-anchor="middle" x="115.5" y="-93.8" font-family="Times,serif" font-size="14.00">mounts for build cache</text>
+<g id="a_node1"><a xlink:href="https://github.com/ZcashFoundation/zebra/pull/7617" xlink:title="ZcashFoundation/zebra#7617&#10;ref(docker): use cache&#10;mounts for build cache" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-53 0,-53 0,-49 -4,-49 -4,-45 0,-45 0,-8 -4,-8 -4,-4 0,-4 0,0 231,0 231,-53"/>
+<polyline fill="none" stroke="black" stroke-width="2" points="0,-49 4,-49 4,-45 0,-45 "/>
+<polyline fill="none" stroke="black" stroke-width="2" points="0,-8 4,-8 4,-4 0,-4 "/>
+<text text-anchor="middle" x="115.5" y="-37.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7617</text>
+<text text-anchor="middle" x="115.5" y="-22.8" font-family="Times,serif" font-size="14.00">ref(docker): use cache</text>
+<text text-anchor="middle" x="115.5" y="-7.8" font-family="Times,serif" font-size="14.00">mounts for build cache</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#6894 -->
-<g id="node4" class="node open">
+<g id="node2" class="node open">
 <title>ZcashFoundation/zebra#6894</title>
-<g id="a_node4"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/6894" xlink:title="ZcashFoundation/zebra#6894&#10;Use cached state for&#10;continuous deployment&#10;instances" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-225.5 0,-225.5 0,-157.5 231,-157.5 231,-225.5"/>
-<text text-anchor="middle" x="115.5" y="-210.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#6894</text>
-<text text-anchor="middle" x="115.5" y="-195.3" font-family="Times,serif" font-size="14.00">Use cached state for</text>
-<text text-anchor="middle" x="115.5" y="-180.3" font-family="Times,serif" font-size="14.00">continuous deployment</text>
-<text text-anchor="middle" x="115.5" y="-165.3" font-family="Times,serif" font-size="14.00">instances</text>
+<g id="a_node2"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/6894" xlink:title="ZcashFoundation/zebra#6894&#10;Use cached state for&#10;continuous deployment&#10;instances" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-139.5 0,-139.5 0,-71.5 231,-71.5 231,-139.5"/>
+<text text-anchor="middle" x="115.5" y="-124.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#6894</text>
+<text text-anchor="middle" x="115.5" y="-109.3" font-family="Times,serif" font-size="14.00">Use cached state for</text>
+<text text-anchor="middle" x="115.5" y="-94.3" font-family="Times,serif" font-size="14.00">continuous deployment</text>
+<text text-anchor="middle" x="115.5" y="-79.3" font-family="Times,serif" font-size="14.00">instances</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7558 -->
-<g id="node5" class="node open">
+<g id="node3" class="node open">
 <title>ZcashFoundation/zebra#7558</title>
-<g id="a_node5"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7558" xlink:title="ZcashFoundation/zebra#7558&#10;dev docs: Document how to&#10;fix cached state issues" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-297 0,-297 0,-244 231,-244 231,-297"/>
-<text text-anchor="middle" x="115.5" y="-281.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7558</text>
-<text text-anchor="middle" x="115.5" y="-266.8" font-family="Times,serif" font-size="14.00">dev docs: Document how to</text>
-<text text-anchor="middle" x="115.5" y="-251.8" font-family="Times,serif" font-size="14.00">fix cached state issues</text>
+<g id="a_node3"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7558" xlink:title="ZcashFoundation/zebra#7558&#10;dev docs: Document how to&#10;fix cached state issues" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-211 0,-211 0,-158 231,-158 231,-211"/>
+<text text-anchor="middle" x="115.5" y="-195.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7558</text>
+<text text-anchor="middle" x="115.5" y="-180.8" font-family="Times,serif" font-size="14.00">dev docs: Document how to</text>
+<text text-anchor="middle" x="115.5" y="-165.8" font-family="Times,serif" font-size="14.00">fix cached state issues</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#4464 -->
-<g id="node6" class="node open">
+<g id="node4" class="node open">
 <title>ZcashFoundation/zebra#4464</title>
-<g id="a_node6"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/4464" xlink:title="ZcashFoundation/zebra#4464&#10;ci: create documentation&#10;on how to run tests&#10;locally for development&#10;purposes" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-398 0,-398 0,-315 231,-315 231,-398"/>
-<text text-anchor="middle" x="115.5" y="-382.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#4464</text>
-<text text-anchor="middle" x="115.5" y="-367.8" font-family="Times,serif" font-size="14.00">ci: create documentation</text>
-<text text-anchor="middle" x="115.5" y="-352.8" font-family="Times,serif" font-size="14.00">on how to run tests</text>
-<text text-anchor="middle" x="115.5" y="-337.8" font-family="Times,serif" font-size="14.00">locally for development</text>
-<text text-anchor="middle" x="115.5" y="-322.8" font-family="Times,serif" font-size="14.00">purposes</text>
+<g id="a_node4"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/4464" xlink:title="ZcashFoundation/zebra#4464&#10;ci: create documentation&#10;on how to run tests&#10;locally for development&#10;purposes" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-312 0,-312 0,-229 231,-229 231,-312"/>
+<text text-anchor="middle" x="115.5" y="-296.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#4464</text>
+<text text-anchor="middle" x="115.5" y="-281.8" font-family="Times,serif" font-size="14.00">ci: create documentation</text>
+<text text-anchor="middle" x="115.5" y="-266.8" font-family="Times,serif" font-size="14.00">on how to run tests</text>
+<text text-anchor="middle" x="115.5" y="-251.8" font-family="Times,serif" font-size="14.00">locally for development</text>
+<text text-anchor="middle" x="115.5" y="-236.8" font-family="Times,serif" font-size="14.00">purposes</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7680 -->
-<g id="node7" class="node open">
+<g id="node5" class="node open">
 <title>ZcashFoundation/zebra#7680</title>
-<g id="a_node7"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7680" xlink:title="ZcashFoundation/zebra#7680&#10;Automatically open an&#10;issue when main branch&#10;release&#45;related merges&#10;fail" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-499 0,-499 0,-416 231,-416 231,-499"/>
-<text text-anchor="middle" x="115.5" y="-483.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7680</text>
-<text text-anchor="middle" x="115.5" y="-468.8" font-family="Times,serif" font-size="14.00">Automatically open an</text>
-<text text-anchor="middle" x="115.5" y="-453.8" font-family="Times,serif" font-size="14.00">issue when main branch</text>
-<text text-anchor="middle" x="115.5" y="-438.8" font-family="Times,serif" font-size="14.00">release&#45;related merges</text>
-<text text-anchor="middle" x="115.5" y="-423.8" font-family="Times,serif" font-size="14.00">fail</text>
+<g id="a_node5"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7680" xlink:title="ZcashFoundation/zebra#7680&#10;Automatically open an&#10;issue when main branch&#10;release&#45;related merges&#10;fail" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" stroke-width="2" points="231,-413 0,-413 0,-330 231,-330 231,-413"/>
+<text text-anchor="middle" x="115.5" y="-397.8" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7680</text>
+<text text-anchor="middle" x="115.5" y="-382.8" font-family="Times,serif" font-size="14.00">Automatically open an</text>
+<text text-anchor="middle" x="115.5" y="-367.8" font-family="Times,serif" font-size="14.00">issue when main branch</text>
+<text text-anchor="middle" x="115.5" y="-352.8" font-family="Times,serif" font-size="14.00">release&#45;related merges</text>
+<text text-anchor="middle" x="115.5" y="-337.8" font-family="Times,serif" font-size="14.00">fail</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7891 -->
-<g id="node8" class="node open">
+<g id="node6" class="node open">
 <title>ZcashFoundation/zebra#7891</title>
-<g id="a_node8"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7891" xlink:title="ZcashFoundation/zebra#7891&#10;change(docker): Publish&#10;fewer Zebra docker tags,&#10;and standardise names" target="_blank">
-<polygon fill="#c2e0c6" stroke="black" points="498,-491.5 267,-491.5 267,-423.5 498,-423.5 498,-491.5"/>
-<text text-anchor="middle" x="382.5" y="-476.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7891</text>
-<text text-anchor="middle" x="382.5" y="-461.3" font-family="Times,serif" font-size="14.00">change(docker): Publish</text>
-<text text-anchor="middle" x="382.5" y="-446.3" font-family="Times,serif" font-size="14.00">fewer Zebra docker tags,</text>
-<text text-anchor="middle" x="382.5" y="-431.3" font-family="Times,serif" font-size="14.00">and standardise names</text>
+<g id="a_node6"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7891" xlink:title="ZcashFoundation/zebra#7891&#10;change(docker): Publish&#10;fewer Zebra docker tags,&#10;and standardise names" target="_blank">
+<polygon fill="#c2e0c6" stroke="black" points="498,-405.5 267,-405.5 267,-337.5 498,-337.5 498,-405.5"/>
+<text text-anchor="middle" x="382.5" y="-390.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7891</text>
+<text text-anchor="middle" x="382.5" y="-375.3" font-family="Times,serif" font-size="14.00">change(docker): Publish</text>
+<text text-anchor="middle" x="382.5" y="-360.3" font-family="Times,serif" font-size="14.00">fewer Zebra docker tags,</text>
+<text text-anchor="middle" x="382.5" y="-345.3" font-family="Times,serif" font-size="14.00">and standardise names</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7680&#45;&gt;ZcashFoundation/zebra#7891 -->
-<g id="edge2" class="edge">
+<g id="edge1" class="edge">
 <title>ZcashFoundation/zebra#7680&#45;&gt;ZcashFoundation/zebra#7891</title>
-<path fill="none" stroke="black" d="M231.19,-457.5C239.55,-457.5 247.99,-457.5 256.4,-457.5"/>
-<polygon fill="black" stroke="black" points="256.63,-461 266.63,-457.5 256.63,-454 256.63,-461"/>
+<path fill="none" stroke="black" d="M231.19,-371.5C239.55,-371.5 247.99,-371.5 256.4,-371.5"/>
+<polygon fill="black" stroke="black" points="256.63,-375 266.63,-371.5 256.63,-368 256.63,-375"/>
 </g>
 <!-- ZcashFoundation/zebra#7892 -->
-<g id="node9" class="node open">
+<g id="node7" class="node open">
 <title>ZcashFoundation/zebra#7892</title>
-<g id="a_node9"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7892" xlink:title="ZcashFoundation/zebra#7892&#10;change(release): Enable&#10;all user features in the&#10;`experimental` build" target="_blank">
-<polygon fill="#a7c2aa" stroke="black" points="765,-491.5 534,-491.5 534,-423.5 765,-423.5 765,-491.5"/>
-<text text-anchor="middle" x="649.5" y="-476.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7892</text>
-<text text-anchor="middle" x="649.5" y="-461.3" font-family="Times,serif" font-size="14.00">change(release): Enable</text>
-<text text-anchor="middle" x="649.5" y="-446.3" font-family="Times,serif" font-size="14.00">all user features in the</text>
-<text text-anchor="middle" x="649.5" y="-431.3" font-family="Times,serif" font-size="14.00">`experimental` build</text>
+<g id="a_node7"><a xlink:href="https://github.com/ZcashFoundation/zebra/issues/7892" xlink:title="ZcashFoundation/zebra#7892&#10;change(release): Enable&#10;all user features in the&#10;`experimental` build" target="_blank">
+<polygon fill="#a7c2aa" stroke="black" points="765,-405.5 534,-405.5 534,-337.5 765,-337.5 765,-405.5"/>
+<text text-anchor="middle" x="649.5" y="-390.3" font-family="Times,serif" font-size="14.00">ZcashFoundation/zebra#7892</text>
+<text text-anchor="middle" x="649.5" y="-375.3" font-family="Times,serif" font-size="14.00">change(release): Enable</text>
+<text text-anchor="middle" x="649.5" y="-360.3" font-family="Times,serif" font-size="14.00">all user features in the</text>
+<text text-anchor="middle" x="649.5" y="-345.3" font-family="Times,serif" font-size="14.00">`experimental` build</text>
 </a>
 </g>
 </g>
 <!-- ZcashFoundation/zebra#7891&#45;&gt;ZcashFoundation/zebra#7892 -->
-<g id="edge3" class="edge">
+<g id="edge2" class="edge">
 <title>ZcashFoundation/zebra#7891&#45;&gt;ZcashFoundation/zebra#7892</title>
-<path fill="none" stroke="black" d="M498.19,-457.5C506.55,-457.5 514.99,-457.5 523.4,-457.5"/>
-<polygon fill="black" stroke="black" points="523.63,-461 533.63,-457.5 523.63,-454 523.63,-461"/>
+<path fill="none" stroke="black" d="M498.19,-371.5C506.55,-371.5 514.99,-371.5 523.4,-371.5"/>
+<polygon fill="black" stroke="black" points="523.63,-375 533.63,-371.5 523.63,-368 523.63,-375"/>
 </g>
 </g>
 </svg>
